-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 4.15.0-beta1
-
None
-
f348e952b8b8d32175d7400a5e004e60ee94510f (qt-creator/qt-creator/4.15)
When I open Qt Creator source code in Qt Creator 4.15.0-beta1 then issue <cmo CMakeProjectManager> I will get the corresponding CMakeLists.txt opened, but in the Projects pane the CMakeLists.txt that gets synced is the one in <File System> and not in the project view.
If I open a source file next to the CMakeList.txt then the Projects pane gets synced to the correct project view.
Opening a CMakeLists.txt should open also in project view and not in <File System>.
| For Gerrit Dashboard: QTCREATORBUG-25493 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 339429,2 | CMake: Make sure file node from project is selected | 4.15 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |